Addressed compression of imagesand fixed a problem with text scaling on smaller screens

--- a/MainICOPage/assets/css/overide.css
+++ b/MainICOPage/assets/css/overide.css
@@ -1,3 +1,8 @@
+Fix borken responsive design on smaller screens
+html, body {
+    overflow-x:hidden
+}
+
 .heading-canvas {
     position: absolute;
     top: 0;
